MET-5968 Adjusted unit tests